# git-mcp

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: git-commit.md
src/: main.rs
